--- a/src/_includes/layouts/doc.njk
+++ b/src/_includes/layouts/doc.njk
@@ -5,6 +5,10 @@
 {% set codeinjection_head = doc.codeinjection_head %}
 {% set codeinjection_foot = doc.codeinjection_foot %}
 
+{% block prism %}
+    {% include "partials/prism.njk" %}
+{% endblock %}
+
 {% block content %}
     <main id="site-main" class="page-template site-main outer">
         <div class="inner">
@@ -56,7 +60,7 @@
 {% endblock %}
 
 {% block seo %}
-    <link rel="amphtml" href="{{ site.url + doc.path + "amp/" }}">
+    <link rel="amphtml" href="{{ site.url + doc.path + "amp/" | url }}">
 
     {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
