feat: enable goodle ads on news

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -47,6 +47,10 @@
         {% endset %}
         <script>{{ js | jsMin | safe }}</script>
 
+        {# Dynamically load Adsense scripts #}
+        {% block monetization %}
+        {% endblock %}
+
         {# Pulls scripts that can be safely cached and placed / defered
         in the head, but that we want to include only when readers go to
         specific pages that require them (ex. published-date.js on the
