--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -26,6 +26,7 @@ on every page through _includes/layouts/default.njk
 13. Tags
 14. learn-cta-row and social-row
 15. under-header-content donation
+16. Ads
 
 */
 
@@ -78,7 +79,7 @@ body {
 /* Centered content container blocks */
 .inner {
     margin: 0 auto;
-    max-width: 1040px;
+    max-width: 1060px;
     width: 100%;
 }
 
@@ -749,7 +750,6 @@ make sure this only happens on large viewports / desktop-ish devices.
 /* ^ Required to make .post-full-content:before/after z-index stacking work */
 
 .post-full-header {
-    margin: 0 auto;
     padding: 0vw 0vw 3vw;
     max-width: 1040px;
 }
@@ -836,12 +836,6 @@ make sure this only happens on large viewports / desktop-ish devices.
 @media (min-width: 501px) and (max-width: 999px) {
     .post-full-content {
         padding: 5vw 7vw 0;
-    }
-}
-
-@media (min-width: 1000px) and (max-width: 1170px) {
-    .post-full-content {
-        padding: 5vw 9vw 0;
     }
 }
 
@@ -2371,5 +2365,42 @@ a.banner:hover span {
     a.banner {
         padding: 10px;
         font-size: 17px;
+    }
+}
+
+/* 16. Ads
+/* ---------------------------------------------------------- */
+
+.post-and-sidebar {
+    /* display: grid set dynamically for unauthenticated readers */
+    grid-template-columns: minmax(0, 1fr) 300px;
+    gap: 40px;
+    margin: 0 auto;
+}
+
+.sidebar {
+    /* display: flex set dynamically for unauthenticated readers */
+    display: none;
+    max-width: 300px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.banner-ad {
+    display: none;
+}
+
+.ad-container {
+    border: 3px solid var(--gray85);
+}
+
+@media (max-width: 900px) {
+    /* Override dynamically set styles */
+    .post-and-sidebar {
+        display: block !important;
+    }
+
+    .sidebar {
+        display: none !important;
     }
 }
