feat: add landing page tests, install cypress plugin, and configure eslint

--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -1,5 +1,5 @@
 <a class="banner" id="banner" rel="noopener noreferrer" href="{% t 'links:banner-url' %}" target="_blank">
-    <p>
+    <p data-test-label="banner-text">
         {% t 'banner.text' %}
     </p>
 </a>
