--- a/src/_includes/layouts/doc.njk
+++ b/src/_includes/layouts/doc.njk
@@ -61,6 +61,7 @@
 
 {% block seo %}
     <link rel="amphtml" href="{{ site.url + doc.path + "amp/" | url }}">
+    <meta name="description" content="{{ doc.excerpt }}">
 
     {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
