fix: keyword and description meta tags only on landing, then excerpts for posts / pages

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -133,6 +133,7 @@
 
 {% block seo %}
     <link rel="amphtml" href="{{ site.url + post.path + "amp/" | url }}">
+    <meta name="description" content="{{ post.excerpt }}">
 
     {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
