feat: add page tests

--- a/src/_includes/layouts/doc.njk
+++ b/src/_includes/layouts/doc.njk
@@ -1,7 +1,7 @@
 {% extends 'layouts/default.njk' %}
 
 {% set title = doc.title %}
-{% set canonicalUrl = site.url + post.path %}
+{% set canonicalUrl = site.url + doc.path %}
 {% set codeinjection_head = doc.codeinjection_head %}
 {% set codeinjection_foot = doc.codeinjection_foot %}
 
