fix: author rss feed link

--- a/src/_includes/partials/author-info.njk
+++ b/src/_includes/partials/author-info.njk
@@ -68,7 +68,7 @@
         {% endif %}
         <a
             class="social-link social-link-rss"
-            href="https://feedly.com/i/subscription/feed/{{ author.absolute_url }}rss/"
+            href="https://feedly.com/i/subscription/feed/{{ author.url }}rss/"
             target="_blank"
             rel="noopener"
         >
