--- a/src/_includes/layouts/author.njk
+++ b/src/_includes/layouts/author.njk
@@ -3,6 +3,7 @@
 
 {% set title = author.name + " - " + site.title %}
 {% set canonicalUrl = site.url + author.path %}
+{% set defaultDescription %}{% t 'meta:description' %}{% endset %}
 
 {% block content %}
     {% include "partials/author-info.njk" %}
@@ -22,31 +23,35 @@
 {% endblock %}
 
 {% block seo %}
+    {% if author.bio %}
+        <meta name="description" content="{{ author.bio }}">
+    {% endif %}
+
     {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="profile">
     <meta property="og:title" content="{{ title }}">
-    <meta property="og:description" content="{% t 'meta:description' %}">
+    <meta property="og:description" content="{{ author.bio if author.bio else defaultDescription }}">
     <meta property="og:url" content="{{ site.url + author.path }}">
     <meta property="og:image" content="{{ author.cover_image if author.cover_image else site.cover_image }}">
     <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
-    {% if post.primary_author.facebook %}
-        <meta property="article:author" content="{{ post.primary_author.facebook }}">
+    {% if author.facebook %}
+        <meta property="article:author" content="{{ author.facebook }}">
     {% endif %}
 
     {# Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ title }}">
-    <meta property="twitter:description" content="{% t 'meta:description' %}">
+    <meta name="twitter:description" content="{{ author.bio if author.bio else defaultDescription }}">
     <meta name="twitter:url" content="{{ site.url + author.path }}">
-    <meta property="twitter:image" content="{{ author.cover_image if author.cover_image else site.cover_image }}">
+    <meta name="twitter:image" content="{{ author.cover_image if author.cover_image else site.cover_image }}">
     <meta name="twitter:site" content="{{ site.twitter }}">
     {% if author.twitter %}
-        <meta name="twitter:creator" content="{{ post.primary_author.twitter }}">
+        <meta name="twitter:creator" content="{{ author.twitter }}">
     {% endif %}
 
-    <meta property="og:image:width" content="{{ author.image_dimensions.cover_image.width if author.cover_image else site.image_dimensions.cover_image.width }}">
-    <meta property="og:image:height" content="{{ author.image_dimensions.cover_image.height if author.cover_image else site.image_dimensions.cover_image.height }}">
+    <meta property="og:image:width" content="{{ author.image_dimensions.cover_image.width if author.image_dimensions.cover_image else site.image_dimensions.cover_image.width }}">
+    <meta property="og:image:height" content="{{ author.image_dimensions.cover_image.height if author.image_dimensions.cover_image else site.image_dimensions.cover_image.height }}">
 {% endblock %}
 
 {% block jsonLd %}
