--- a/src/_includes/partials/author-info.njk
+++ b/src/_includes/partials/author-info.njk
@@ -11,7 +11,7 @@
             [150]
         %}
     {% endif %}
-    <h1 class="site-title">{{ author.name }}</h1>
+    <h1 data-test-label="author-name" class="site-title">{{ author.name }}</h1>
     {% if author.bio %}
         <h2 class="author-bio">{{ author.bio | safe }}</h2>
     {% endif %}
