feat: configure tests and scripts for other locales

--- a/src/_includes/partials/social-row.njk
+++ b/src/_includes/partials/social-row.njk
@@ -1,4 +1,4 @@
-<p class="social-row">
+<p data-test-label="social-row" class="social-row">
     {% if post.primary_author.twitter %}
         {% t 'social-row.author-has-twitter' %}
         <a id='tweet-btn' class='cta-button'>{% t 'buttons.author-has-twitter' %}</a>
