fix: convert ad macro to simple template

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,6 +1,5 @@
 {% extends 'layouts/default.njk' %}
 {% from "partials/byline.njk" import byline %}
-{% from "partials/ad.njk" import ad %}
 
 {% set title = post.title %}
 {% set canonicalUrl = site.url + post.path %}
@@ -77,11 +76,11 @@
                         {% if adsEnabled and site.lang !== "zh" %}
                             <div class="sidebar">
                                 {# Show 2 ads by default #}
-                                {{ ad() }}
-                                {{ ad() }}
+                                {% include "partials/ad.njk" %}
+                                {% include "partials/ad.njk" %}
                                 {# For every 2 mins of reading time, show another ad #}
                                 {% for i in range(1, post.reading_time, 2) %}
-                                    {{ ad() }}
+                                    {% include "partials/ad.njk" %}
                                 {% endfor %}
                             </div>
                         {% endif %}
@@ -113,7 +112,7 @@
             </article>
             {% if adsEnabled and site.lang !== "zh" %}
                 <div class="banner-ad bottom">
-                    {{ ad() }}
+                    {% include "partials/ad.njk" %}
                 </div>
             {% endif %}
         </div>
