fix: missing ad client and ad slot, DRY out (#78)

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,12 +1,13 @@
 {% extends 'layouts/default.njk' %}
 {% from "partials/byline.njk" import byline %}
-{% from "partials/ad.njk" import ad %}
 
 {% set title = post.title %}
 {% set canonicalUrl = site.url + post.path %}
 {% set codeinjection_head = post.codeinjection_head %}
 {% set codeinjection_foot = post.codeinjection_foot %}
 {% set adsEnabled = secrets.adsEnabled === 'true' %}
+{# Show 1 ad for every 2 minutes of reading time, plus two by default #}
+{% set numOfSidebarAds = ((post.reading_time / 2) + 2) | round(0, 'floor') %}
 
 {% block prism %}
     {% include "partials/prism.njk" %}
@@ -76,12 +77,8 @@
                         </section>
                         {% if adsEnabled and site.lang !== "zh" %}
                             <div class="sidebar">
-                                {# Show 2 ads by default #}
-                                {{ ad() }}
-                                {{ ad() }}
-                                {# For every 2 mins of reading time, show another ad #}
-                                {% for i in range(1, post.reading_time, 2) %}
-                                    {{ ad() }}
+                                {% for i in range(0, numOfSidebarAds) %}
+                                    {% include "partials/ad.njk" %}
                                 {% endfor %}
                             </div>
                         {% endif %}
@@ -113,7 +110,7 @@
             </article>
             {% if adsEnabled and site.lang !== "zh" %}
                 <div class="banner-ad bottom">
-                    {{ ad() }}
+                    {% include "partials/ad.njk" %}
                 </div>
             {% endif %}
         </div>
