--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -144,8 +144,8 @@
     {% endif %}
     <meta property="og:url" content="{{ site.url + post.path }}">
     <meta property="og:image" content="{{ post.feature_image }}">
-    <meta property="article:published_time" content="{{ post.published_at | toISOString }}">
-    <meta property="article:modified_time" content="{{ post.updated_at | toISOString }}">
+    <meta property="article:published_time" content="{% toISOString doc.published_at %}">
+    <meta property="article:modified_time" content="{% toISOString doc.updated_at %}">
     {% for tag in post.tags %}
         <meta property="article:tag" content="{{ tag.name }}">
     {% endfor %}
