fix: shortcode typos

--- a/src/_includes/layouts/amp.njk
+++ b/src/_includes/layouts/amp.njk
@@ -22,8 +22,8 @@
     {% endif %}
     <meta property="og:url" content="{{ site.url + post.path }}">
     <meta property="og:image" content="{{ post.feature_image }}">
-    <meta property="article:published_time" content="{% toISOString doc.published_at %}">
-    <meta property="article:modified_time" content="{% toISOString doc.updated_at %}">
+    <meta property="article:published_time" content="{% toISOString post.published_at %}">
+    <meta property="article:modified_time" content="{% toISOString post.updated_at %}">
     {% for tag in post.tags %}
         <meta property="article:tag" content="{{ tag.name }}">
     {% endfor %}
