fix: update templates and links.json files for each locale

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -128,7 +128,7 @@
             <div class="col-header">{% t 'footer.our-nonprofit' %}</div>
             <div class="footer-divider"></div>
             <div class="our-nonprofit">
-                <a href="{% t 'links:about-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.about-url' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.about' %}
                 </a>
                 <a href="https://www.linkedin.com/school/free-code-camp/people/" rel="noopener noreferrer" target="_blank">
@@ -137,28 +137,28 @@
                 <a href="https://github.com/freeCodeCamp/" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.open-source' %}
                 </a>
-                <a href="{% t 'links:shop-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.shop-url' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.shop' %}
                 </a>
-                <a href="{% t 'links:support-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.support-url' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.support' %}
                 </a>
-                <a href="{% t 'links:sponsors-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.sponsors-url' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.sponsors' %}
                 </a>
-                <a href="{% t 'links:honesty-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.honesty-url' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.honesty' %}
                 </a>
-                <a href="{% t 'links:coc-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.coc-url' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.coc' %}
                 </a>
-                <a href="{% t 'links:privacy-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.privacy-url' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.privacy' %}
                 </a>
-                <a href="{% t 'links:tos-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.tos-url' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.tos' %}
                 </a>
-                <a href="{% t 'links:copyright-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.copyright-url' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.copyright' %}
                 </a>
             </div>
