--- a/src/_includes/partials/site-nav.njk
+++ b/src/_includes/partials/site-nav.njk
@@ -11,14 +11,14 @@
                 class="nav-forum"
                 id="nav-forum"
                 rel="noopener noreferrer"
-                href="{% t 'links:forum-url' %}"
+                href="{% t 'links:nav.forum-url' %}"
                 target="_blank"
             >{% t 'buttons.forum' %}</a>
             <a
                 class="toggle-button-nav"
                 id="nav-donate"
                 rel="noopener noreferrer"
-                href="{% t 'links:donate-url' %}"
+                href="{% t 'links:nav.donate-url' %}"
                 target="_blank"
             >{% t 'buttons.donate' %}</a>
         </div>
