--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -133,6 +133,7 @@
 
 {% block seo %}
     <link rel="amphtml" href="{{ site.url + post.path + "amp/" | url }}">
+    <meta name="description" content="{{ post.excerpt }}">
 
     {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
@@ -143,8 +144,8 @@
     {% endif %}
     <meta property="og:url" content="{{ site.url + post.path }}">
     <meta property="og:image" content="{{ post.feature_image }}">
-    <meta property="article:published_time" content="{{ post.published_at }}">
-    <meta property="article:modified_time" content="{{ post.updated_at }}">
+    <meta property="article:published_time" content="{% toISOString post.published_at %}">
+    <meta property="article:modified_time" content="{% toISOString post.updated_at %}">
     {% for tag in post.tags %}
         <meta property="article:tag" content="{{ tag.name }}">
     {% endfor %}
