fix: update and simplify links.json for all locales, update i18n keys in other files

--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -1,4 +1,4 @@
-<a class="banner" id="banner" rel="noopener noreferrer" href="{% t 'links:banner-url' %}" target="_blank">
+<a class="banner" id="banner" rel="noopener noreferrer" href="{% t 'links:banner' %}" target="_blank">
     <p data-test-label="banner-text">
         {% t 'banner.text' %}
     </p>
