--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-{% set donateUrl %}{% t "links:donate-url" %}{% endset %}
+{% set donateUrl %}{% t "links:donate" %}{% endset %}
 
 <footer class="site-footer">
     <div class="footer-container">
@@ -128,7 +128,7 @@
             <div class="col-header">{% t 'footer.our-nonprofit' %}</div>
             <div class="footer-divider"></div>
             <div class="our-nonprofit">
-                <a href="{% t 'links:footer.about-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.about' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.about' %}
                 </a>
                 <a href="https://www.linkedin.com/school/free-code-camp/people/" rel="noopener noreferrer" target="_blank">
@@ -137,28 +137,28 @@
                 <a href="https://github.com/freeCodeCamp/" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.open-source' %}
                 </a>
-                <a href="{% t 'links:footer.shop-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="https://www.freecodecamp.org/news/shop/" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.shop' %}
                 </a>
-                <a href="{% t 'links:footer.support-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.support' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.support' %}
                 </a>
-                <a href="{% t 'links:footer.sponsors-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="https://www.freecodecamp.org/news/sponsors/" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.sponsors' %}
                 </a>
-                <a href="{% t 'links:footer.honesty-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.honesty' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.honesty' %}
                 </a>
-                <a href="{% t 'links:footer.coc-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="{% t 'links:footer.coc' %}" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.coc' %}
                 </a>
-                <a href="{% t 'links:footer.privacy-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="https://www.freecodecamp.org/news/privacy-policy/" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.privacy' %}
                 </a>
-                <a href="{% t 'links:footer.tos-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="https://www.freecodecamp.org/news/terms-of-service/" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.tos' %}
                 </a>
-                <a href="{% t 'links:footer.copyright-url' %}" rel="noopener noreferrer" target="_blank">
+                <a href="https://www.freecodecamp.org/news/copyright-policy/" rel="noopener noreferrer" target="_blank">
                     {% t 'footer.links.copyright' %}
                 </a>
             </div>
