--- a/src/_includes/partials/learn-cta-row.njk
+++ b/src/_includes/partials/learn-cta-row.njk
@@ -1,7 +1,7 @@
 <div class='learn-cta-row'>
     <p>
         {% t 'learn-to-code-cta.text' %}
-        <a href="{% t 'links:learn-to-code-cta-url' %}" class="cta-button" id="learn-to-code-cta" rel="noopener noreferrer" target="_blank">
+        <a href="{% t 'links:learn-to-code-cta' %}" class="cta-button" id="learn-to-code-cta" rel="noopener noreferrer" target="_blank">
           {% t 'buttons.learn-to-code-cta' %}
         </a>
     </p>
