fix: simplify banner and learn-to-code-cta entries

--- a/src/_includes/partials/learn-cta-row.njk
+++ b/src/_includes/partials/learn-cta-row.njk
@@ -1,6 +1,6 @@
 <div class='learn-cta-row'>
     <p>
-        {% t 'learn-to-code-cta.text' %}
+        {% t 'learn-to-code-cta' %}
         <a href="{% t 'links:learn-to-code-cta' %}" class="cta-button" id="learn-to-code-cta" rel="noopener noreferrer" target="_blank">
           {% t 'buttons.learn-to-code-cta' %}
         </a>
