--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -1,5 +1,5 @@
 <a class="banner" id="banner" rel="noopener noreferrer" href="{% t 'links:banner' %}" target="_blank">
     <p data-test-label="banner-text">
-        {% t 'banner.text' %}
+        {% t 'banner' %}
     </p>
 </a>
